--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "jq-ember",
   "dependencies": {
-    "ember": "1.13.7",
+    "ember": "2.1.0",
     "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
     "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
     "ember-data": "1.13.8",
@@ -10,7 +10,11 @@
     "ember-qunit-notifications": "0.0.7",
     "ember-resolver": "~0.1.18",
     "jquery": "^1.11.3",
+    "jquerypic": "https://github.com/LaminSanneh/sitepoint-jquerypic.git#faulty",
     "loader.js": "ember-cli/loader.js#3.2.1",
     "qunit": "~1.18.0"
+  },
+  "resolutions": {
+    "ember": "2.1.0"
   }
 }
